# Simple-BitTorrent

./: .gitignore  CMakeLists.txt  README.md  main.cpp
diagrams/: @startuml.txt  bencode.txt  peer.txt  piece_scheduling.puml  test.cpp  test.txt  大纲.md  接口.txt  数据流.txt  数据结构.txt  架构.txt  模块.txt  状态.txt  类图.txt  调度流程图2.txt  队列.txt
diagrams/classes/: bencode.txt  buffer.txt  download.txt  peer.txt
download/: download.cpp  message.cpp  peer_connection.cpp
include/download/: download.h  message.h  peer_connection.h
include/tracker/: ssl_transport.h  tracker.h  url.h
parsing/: bencode.cpp  buffer.cpp  torrent.cpp
source/: CMakeLists.txt  main.cpp
source/include/parsing/: torrent.h
source/include/tracker/: https.h  transport.h  url.h
source/tracker/: tracker.cpp  url.cpp
test/: CMakeLists.txt  test_bencode.cpp  test_torrent.cpp
tracker/: http.cpp  https.cpp  ssl_transport.cpp  tracker.cpp  transport.cpp  url.cpp
